<resources>
    <string name="app_name">NutriFood</string>
    <string name="erro">Erro: </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="op_foto">Foto de Perfil (Opcional)</string>
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="telefone">Telefone</string>
    <string name="senha">Senha</string>
    <string name="op_peso">Peso (Opcional)</string>
    <string name="op_altura">Altura (Opcional)</string>
    <string name="op_sexo">Sexo (Opcional)</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="inicio">Início</string>
    <string name="calculo_imc">Cálculo IMC</string>
    <string name="calculo_avancado">Cálculo Avançado</string>
    <string name="orientacao_nutricional">Orientação Nutricional</string>
    <string name="alarmes">Alarmes</string>
    <string name="alimentos">Alimentos</string>
    <string name="entrar_ou_cadastrar">Entrar ou Cadastrar</string>
    <string name="informacoes">Informações</string>
    <string name="deslogar">Deslogar</string>
    <string name="entrar">Entrar</string>
    <string name="esqueci_a_senha">Esqueci a senha</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="lista_vazia">Lista Vazia</string>
    <string name="tipo_de_alimento">Tipo de Alimento:</string>
    <string name="recomendacao">Recomendação: </string>
    <string name="evitar">Evitar:</string>

    <!-- TODO - Chaves AdMob -->
    <string name="admob_teste_ofc">ca-app-pub-6073037388536839/9657164605</string>
    <string name="admob_teste">000</string>
    <string name="admob_teste2">ca-app-pub-3940256099942544/6300978111</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="anos">Anos</string>
    <string name="status">Status</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="metros">m</string>
    <string name="sexo">Sexo</string>
    <string name="necessidades_hidricas">Necessidades Hídricas</string>
    <string name="litros">Litros</string>
    <string name="peso_ideal">Peso Ideal</string>
    <string name="kg">Kg</string>
    <string name="peso_ajustado">Peso Ajustado</string>
    <string name="idade">Idade</string>
    <string name="faixa_etaria">Faixa Etária</string>
    <string name="indefinido">Indefinido</string>
    <string name="resultado">Resultado</string>
    <string name="voltar">Voltar</string>
    <string name="configuracoes">Configurações</string>
    <string name="adicionar_alimento">Adicionar Alimento</string>
    <string name="calcular">Calcular</string>
    <string name="imc">IMC:</string>
    <string name="classificacao">Classificação</string>
</resources>
