<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".activity.CadastroActivity">

    <ProgressBar
        android:id="@+id/progressBarCadastro"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_margin="16dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollViewCad_Usuario"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageViewAddFotoPerfil"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:src="@drawable/add_customer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/op_foto"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButtonCameraCadastrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0"
                    android:onClick="abrirCamera"
                    app:srcCompat="@drawable/ic_photo_camera" />

                <ImageButton
                    android:id="@+id/imageButtonGaleriaCadastrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:onClick="abrirGaleria"
                    app:srcCompat="@drawable/ic_photo" />

            </LinearLayout>

            <EditText
                android:id="@+id/cadastroNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_caixa_texto"
                android:padding="10dp"
                android:hint="@string/nome"
                android:inputType="textPersonName"
                android:textColor="@android:color/white"/>


            <EditText
                    android:id="@+id/cadastroEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_caixa_texto"
                    android:padding="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorPrimary" />

            <EditText
                    android:id="@+id/cadastroTelefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_caixa_texto"
                    android:padding="10dp"
                    android:hint="@string/telefone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorPrimary" />

            <EditText
                    android:id="@+id/cadastroSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_caixa_texto"
                    android:padding="10dp"
                    android:hint="@string/senha"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorPrimary" />

            <EditText
                    android:id="@+id/cadastroPesoAtual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_caixa_texto"
                    android:padding="10dp"
                    android:hint="@string/op_peso"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorPrimary" />

            <EditText
                    android:id="@+id/cadastroAlturaAtual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_caixa_texto"
                    android:padding="10dp"
                    android:hint="@string/op_altura"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/background_caixa_texto"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/op_sexo"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioButtonCadMasculino"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/masculino"
                            android:textColor="@android:color/background_light"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/radioButtonCadFeminino"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/feminino"
                            android:textColor="@android:color/background_light"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnCadastrarUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/background_botao"
                android:onClick="validarCadastroUsuario"
                android:text="@string/cadastrar"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>